--- a/src/app/resume-education/resume-education.component.html
+++ b/src/app/resume-education/resume-education.component.html
@@ -10,12 +10,20 @@
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Certified data professional (CDP)</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2013 - 2015</h6>
-          
-          <hr>
+
+        <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>UNH UI/UX Certificate</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2010 - 2013</h6>
+
+          <div class="w3-container">
+          <h5 class="w3-opacity"><b>Amazon Cloud Participator Certification</b></h5>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2020-2023</h6>
+
+          
+
+          
           
         </div>
       </div>
