--- a/src/app/resume-work-experience/resume-work-experience.component.html
+++ b/src/app/resume-work-experience/resume-work-experience.component.html
@@ -2,19 +2,19 @@
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Work Experience</h2>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Intern at Apple Developer</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>April 2002 - April 2003 <span class="w3-tag w3-teal w3-round"></span></h6>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>April 2002 - April 2003 <span class="w3-tag w3-teal w3-round"></span></h6><p>When my journey start<p>
          
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Freelance web designer</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Mar 2012 - Dec 2014</h6>
-          <p>Consectetur adipisicing elit. Praesentium magnam consectetur vel in deserunt aspernatur est reprehenderit sunt hic. Nulla tempora soluta ea et odio, unde doloremque repellendus iure, iste.</p>
+          <p>help me to pay off my student debt</p>
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Data Analytics for Bank of America</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jun 2016 -Current </h6>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p><br>
+          <p> </p><br>
         </div>
       </div>
