--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -4,6 +4,14 @@
   <a routerLink="/shipping">Shipping Prices</a>
 </p>
 
+<p>
+  <a routerLink="/resume">Resume</a>
+</p>
+
+<p>
+  <a routerLink="/graphic">Graphic Design Portfolio</a>
+</p>
+
 <div class="cart-item" *ngFor="let item of items">
   <span>{{ item.name }} </span>
   <span>{{ item.price | currency }}</span>
